fixtures aligning

--- a/Assignments/Assignment1/public/css/styles.css
+++ b/Assignments/Assignment1/public/css/styles.css
@@ -122,5 +122,51 @@ section{
 }
 
 #fixtures-section .section-body{
-	padding: 0px 30px;
+	padding: 0px 30px; /* top & bottom: 0px,  right & left: 30px */
+}
+
+#fixtures{
+	/*padding-top: 30px;*/
+	
+}
+
+
+.fixture{
+	/*background: #ffffff; /* colour section ????????????*/
+	padding-top: 15px;
+	padding-bottom: 15px;
+	/*height: 90px; ???????????????????*/
+	display: flex;
+	
+}
+
+.team {
+	display: inline-block;
+	/*letter-spacing: 2px; /* letter spacing */
+	margin-left: 30px;
+	margin-right: 30px;
+}
+
+.team p{
+	font-weight: bold; /* font weight */
+	color: #777777; /* font colour */
+	margin-bottom: 0%;
+}
+
+.score {
+	display: inline-block;
+	/*position: relative;*/
+	/*height: 100%;*/
+	height: 100%;
+}
+
+.score h3{
+	margin-bottom: 0%;
+}
+
+.fixture img{
+	width: 50px; /* width of content area */
+	vertical-align: middle; /* puts image into the middle of its allowed height */
+	/*background-image: url('../img/team-logos/team4.png');  /* link to image */
+	/*background-size: cover;  /*make image cover element*/
 }
